--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sanity/cli": "^2.35.0",
+    "@sanity/image-url": "^1.0.1",
     "next": "latest",
+    "next-sanity": "^1.0.9",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
